--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "viz.js": "^2.1.2"
+  },
+  "dependencies": {
+    "voll": "^1.2.6"
   }
 }
