--- a/src/data/structs/h1/tags/sound.yml
+++ b/src/data/structs/h1/tags/sound.yml
@@ -67,8 +67,9 @@ type_defs:
       - name: scripted_dialog_player
         comments:
           en: |
-            Causes non-dialog sounds to temporarily fade out while playing,
-            controlled by `sound_gain_under_dialog`.
+            Causes non-dialog sounds to temporarily fade out while playing, controlled by `sound_gain_under_dialog`.
+            This sound class will not play when the player is dead,
+            regardless of how the sound was triggered.
       - name: scripted_effect
       - name: scripted_dialog_other
         comments:
