--- a/src/data/structs/h1/tags/object.yml
+++ b/src/data/structs/h1/tags/object.yml
@@ -297,8 +297,10 @@ type_defs:
             shadows, pop in and out of visibility at the edges of the screen, and
             have inconsistent collision with other objects.
 
-            Additionally, the bounding radius for [device_control](~) determines
-            their interaction radius.
+            Additionally, the bounding radius controls several gameplay functions:
+            
+            * The interaction radius of [device_control](~).
+            * The default activation radius of automatic door [device_machine](~) if unset.
 
             The bounding radius can be visualized in Sapien or Standalone using
             [debug_objects_bounding_spheres](~developer-console#debugfunctions-debug-objects-bounding-spheres).
